# Teaching

./: .gitignore
C/: HelloWorld.c  linker_example.c  pre_proc.c
C++/: .gitignore
C++/Basics/: LC_ARR1.cc  LC_ARR2.cc  LC_ARR3.cc  LC_LCSEQ1.cc  LC_LCSEQ2.cc  references.cpp  simple_ht.cc
C++/Graph/: basic_graph.cc
C++/Inheritance_polymorphism/: ctr_assign_example.cc
C++/Lists/: DLL.cc  LC1.cc  LC10.cc  LC11.cc  LC2.cc  LC4.cc  LC5.cc  LC6.cc  LC7.cc  LC8.cc  LC9.cc  SLL.cc  queue  queue.cc  stack  stack.cc
C++/Recursion/: bst_recursion.cc  fib_version1.cc  fib_version2.cc  fib_version3.cc
C++/STL/: algo_basic.cc  array_demo.cc  deque_demo.cc  iter_demo.cc  vector_demo.cc
C++/Sorting/: InsertionSort.cc  Pivot.cc  bubblesort.cc  merge.cc  mergeSort.cc  quick_sort.cc  selection_sort.cc
C++/classesBasics/: Integer.cc  deepcp_example.cc  example1  example1.cc  example2.cc  example3.cc  example4.cc  example5.cc  example6.cc  move_example.cc
C++/operator/: assignment_example.cc  move_assignment.cc  non_member_op.cc  other_op_example.cc
C++/trees/: bst.cc  max_heap.cc  min_heap.cc
C/Array/: array.c  cstr.c
C/basics/: HelloWorld.c  Second.c  Test.c  Test.h  func_ptr.c
ModernC++/Basic/: 2dArray.cc  Array_vector.cc  Example1.cc  Pointer_mem.cc  default_delete_demo.cc  func_ptr.cc  if_switch.cc  init.c++  iterator_arithmetic.cc  namespace_ex.cc  num_literals.cc  (+2 more)
ModernC++/List/stack/: CMakeLists.txt
ModernC++/List/stack/app/: CMakeLists.txt  stack.cpp
ModernC++/List/stack/inc/MyLib/: item.h
ModernC++/List/stack/src/MyLib/: CMakeLists.txt  list.cpp
(+27 files in other folders)
